TODO add parameter for setting rectangle out of bounds in positioning.ts.  Add string to 'target' type,  Add COACHMARK_ATTRIBUTE_NAME. Fix TeachingBubble closeButton selector.

--- a/packages/office-ui-fabric-react/src/components/TeachingBubble/TeachingBubble.scss
+++ b/packages/office-ui-fabric-react/src/components/TeachingBubble/TeachingBubble.scss
@@ -112,14 +112,6 @@
   font-weight: $ms-font-weight-semilight;
 }
 
-.root .closeButton {
-  position: absolute;
-  @include ms-right(0);
-  top: 0;
-  color: $ms-color-white;
-  font-size: $ms-icon-size-s;
-}
-
 .closeButton {
   position: absolute;
   @include ms-right(0);
